Bug 367944 - Discover crashes when opened twice.
Summary: Discover crashes when opened twice.
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.7.3
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-29 06:09 UTC by Heinrich Schuchardt
Modified: 2016-09-14 11:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heinrich Schuchardt 2016-08-29 06:09:29 UTC
Version: 5.7.3 and 5.7.4

Dear Maintainer,

when I enter in the command line:

/usr/bin/plasma-discover &
/usr/bin/plasma-discover &

plasma-discover crashes with the following output:

QCommandLineParser: argument list cannot be empty, it should contain at least the executable name

KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = plasma-discover path = /usr/bin pid = 11045
KCrash: Arguments: /usr/bin/plasma-discover 
KCrash: Attempting to start /usr/lib/x86_64-linux-gnu/libexec/drkonqi from kdeinit
sock_file=/run/user/1000/kdeinit5__0
"Message recipient disconnected from message bus without replying"
QSocketNotifier: Invalid socket 17 and type 'Read', disabling...
QSocketNotifier: Invalid socket 40 and type 'Read', disabling...
QSocketNotifier: Invalid socket 36 and type 'Read', disabling...
QSocketNotifier: Invalid socket 41 and type 'Read', disabling...

Best regards

Heinrich Schuchardt



Reproducible: Always

Steps to Reproduce:
In the command line enter

/usr/bin/plasma-discover &
/usr/bin/plasma-discover &

Actual Results:  
plasma-discover crashes with the following output:

QCommandLineParser: argument list cannot be empty, it should contain at least the executable name

KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = plasma-discover path = /usr/bin pid = 11045
KCrash: Arguments: /usr/bin/plasma-discover 
KCrash: Attempting to start /usr/lib/x86_64-linux-gnu/libexec/drkonqi from kdeinit
sock_file=/run/user/1000/kdeinit5__0
"Message recipient disconnected from message bus without replying"
QSocketNotifier: Invalid socket 17 and type 'Read', disabling...
QSocketNotifier: Invalid socket 40 and type 'Read', disabling...
QSocketNotifier: Invalid socket 36 and type 'Read', disabling...
QSocketNotifier: Invalid socket 41 and type 'Read', disabling...
 

Expected Results:  
The running version of plasma-discover is brought to the foreground. 

Related Debian-Bug #835897: plasma-discover closes unexpectedly
Comment 1 Aleix Pol 2016-09-14 11:26:45 UTC
Git commit f14c2acf42d93f5d382adaf4a87a7925a20d3ae9 by Aleix Pol.
Committed on 14/09/2016 at 10:56.
Pushed by apol into branch 'master'.

Don't crash when plasma-discover is called with no arguments

M  +1    -1    discover/DiscoverMainWindow.h
M  +3    -0    discover/main.cpp

http://commits.kde.org/discover/f14c2acf42d93f5d382adaf4a87a7925a20d3ae9