Don't crash when plasma-discover is called with no arguments

BUG: 367944